# dasheri

./: .gitignore  README.md  run-test-custom-mango-fixture.sh  todo.md
.github/workflows/: ci-cargo-audit.yml  ci-lint-test.yml
programs/dasheri/: Cargo.toml
programs/dasheri/src/: error.rs  ids.rs  lib.rs
programs/dasheri/src/instructions/: create_mango_account.rs  create_pool.rs  create_pool_account.rs  deposit.rs  deposit_into_mango_account.rs  deposit_into_pool.rs  mod.rs
programs/dasheri/src/iou/instructions/: deposit_into_mango_account.rs  init_gateway.rs  mod.rs
programs/dasheri/src/iou/state/: gateway.rs  mod.rs
programs/dasheri/src/pool/: error.rs  mod.rs
programs/dasheri/src/pool/instructions/: create_mango_account.rs  create_pool.rs  create_pool_account.rs  deposit_into_mango_account.rs  deposit_into_pool.rs  mod.rs
programs/dasheri/src/pool/state/: mod.rs  pool.rs  pool_account.rs
programs/dasheri/src/state/: pool.rs  pool_account.rs
programs/dasheri/tests/: test_basic.rs  test_iou.rs  test_pool.rs
programs/dasheri/tests/program_test/: cookies.rs  mod.rs  solana.rs
