[package]
name = "dasheri"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "dasheri"
doctest = false

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.20.1"
solana-program = "^1.8.5"
anchor-spl = "0.20.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
mango = { git = "https://github.com/blockworks-foundation/mango-v3.git", default-features=false, features = ["no-entrypoint"], branch="v3.3.0" }
mango-common = { git = "https://github.com/blockworks-foundation/mango-v3.git", branch="v3.3.0" }

[dev-dependencies]
solana-sdk = "^1.8.5"
solana-program-test = "^1.8.5"
solana-logger = "^1.8.5"
bytemuck = "^1.7.2"
fixed = { version = "=1.9.0", features = ["serde"] }
fixed-macro = "^1.1.1"

